ingress/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: microservice
  name: microservice
spec:
  replicas: 1
  selector:
    matchLabels:
      app: microservice
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: microservice
    spec:
      containers:
      - image: ghcr.io/mcicolella/docker-microservice
        name: docker-microservice
        resources: {}
status: {}
